--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.2/lib/p5.min.js"></script>
   </head>
   <body>
-    <div id="action-box"></div>
+    <div id="action-box">
+      <div id="generation-count"></div>
+      <div id="population-count"></div>
+      <button type="button" id="play-button"></button>
+    </div>
     <canvas></canvas>
     <script src="main.js"></script>
   </body>
