--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div id="action-box">
       <div id="generation-count"></div>
       <div id="population-count"></div>
-      <button type="button" id="play-button"></button>
+      <button type="button" id="play-button">Play</button>
+      <button type="button" id="reset-button">Reset</button>
     </div>
     <canvas></canvas>
     <script src="main.js"></script>
