Add speed input

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <div id="population-count"></div>
       <button type="button" id="play-button">Play</button>
       <button type="button" id="reset-button">Reset</button>
+      <div>
+        Speed: <input type="number" min="1" max="100" value="10" id="speed-slider" />
+      </div>
     </div>
     <canvas></canvas>
     <script src="main.js"></script>
