Add save to file and Load from file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <div>
         Speed: <input type="number" min="1" max="100" value="10" id="speed-slider" />
       </div>
+      <button type="button" id="save-to-file-button">Save to file</button>
+      <input type="file" id="load-from-file-input" style="display: none;" />
+      <button type="button" id="load-from-file-button">Load from file</button>
     </div>
     <canvas></canvas>
     <script src="main.js"></script>
