--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
           <option value="gosper_glider_gun">Gosper Glider Gun</option>
         </select>
       </div>
+      <a href="https://github.com/nishantHolla/game-of-life" target="_blank" rel="noreferrer noopener">Github</a>
+      <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank" rel="noreferrer noopener">About Game of Life</a>
     </div>
     <canvas></canvas>
     <script src="main.js"></script>
