--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div>
         <span>Premade: </span>
         <select id="premade-select">
-          <option value="default" selected>Slect</option>
+          <option value="default" selected>Select</option>
           <option value="4_8_12_diamond">4 8 12 diamond</option>
           <option value="119P4H1V0">119P4H1V0</option>
           <option value="ak_94">AK 94</option>
